# ur5_simulation

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robotiq_description/share/robotiq_description/: local_setup.sh  package.sh
install/ur5_controller/share/ur5_controller/: local_setup.sh  package.sh  package.xml
install/ur5_gripper_description/share/ur5_gripper_description/: package.bash  package.zsh
install/ur5_gripper_moveit_config/share/ur5_gripper_moveit_config/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur5_robot_py/share/ur5_robot_py/: package.bash  (+2 more)
log/: latest_build  latest_list
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/ur5_controller/: CMakeLists.txt
src/ur5_controller/config/: ur5_controller.yaml
src/ur5_gripper_moveit_config/: .setup_assistant  CMakeLists.txt
src/ur5_gripper_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  txt.yaml  ur5_robot.ros2_control.xacro  ur5_robot.srdf  ur5_robot.urdf.xacro
src/ur5_gripper_moveit_config/launch/: moveit.launch.py
src/ur5_robot_description/: CMakeLists.txt  package.xml
src/ur5_robot_description/launch/: gazebo.launch.py  gz.launch.py
src/ur5_robot_description/rviz/: display.rviz  display_new.rviz
src/ur5_robot_description/urdf/: eef.xacro  ur5_gripper_main.xacro  ur5_robot_gazebo.xacro  ur5_robot_transmission.xacro  ur5_ros2_control.xacro
src/ur5_robot_py/: package.xml  setup.cfg  setup.py
(+67 files in other folders)
